# jaledit

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  test.txt
src/: app.c  app.h  buffer.c  buffer.cpp  buffer.h  buffer.hpp  constants.h  constants.hpp  cursor.c  cursor.h  cursor.hpp  editor.c  editor.cpp  editor.h  editor.hpp  keybind.c  keybind.h  main.c  main.cpp  piece.c  piece.h  piece_table.c  piece_table.h  snapshot.c  snapshot.h  utils.c  utils.cpp  utils.h  utils.hpp  vector.c  vector.h  view.c  view.h
src/autocomplete/: suggester.c  suggester.cpp  suggester.h  suggester.hpp  test.c
src/buffer/: node.cpp  node.hpp
src/common/: constants.h  shared_ptr.c  shared_ptr.h  shared_ptr_test.c  utils.c  utils.h  vector.c  vector.h  vector_test.c
src/finder/: finder.c  finder.cpp  finder.h  finder.hpp  test.c
src/highlight/: highlight.cpp  highlight.hpp  lexer.c  lexer.cpp  lexer.h  lexer.hpp  test.c  token.c  token.cpp  token.h  token.hpp
src/keybind/: keybind.hpp  node.c  node.cpp  node.h  node.hpp  node_inl.hpp  test.c  trie.c  trie.cpp  trie.h  trie.hpp  trie_inl.hpp
src/rope/: node.c  node.cpp  node.h  node.hpp  node_branch.cpp  node_leaf.cpp  rope.c  rope.cpp  rope.h  rope.hpp  test.c  test.cpp  utils.cpp  utils.hpp
